examples/test/testpolicy16306.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16306
  namespace: namespace447
spec:
  podSelector:
    matchLabels:
      key42: value35
      key5: value33
      key32: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value2
      podSelector:
        matchLabels:
          key11: value46
          key13: value5
